Crud,navbar,homepage...

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -10,239 +10,237 @@
   /* background-color: rgb(5, 17, 34); */
   /* color:#eaeaea; */
 }
-.App{
+.App {
   font-family: "Roboto", sans-serif;
-    /* height: 100vh; */
-    padding: 20px 50px;
-    /* display: flex;
+  /* height: 100vh; */
+  padding: 20px 50px;
+  /* display: flex;
     align-items: center;
     justify-content: center;
     text-align: center; */
-    padding-top: 10vh;
-    background-color: rgb(5, 17, 34);
-    color:#eaeaea;
-    /* height: 100vh; */
+  padding-top: 10vh;
+  background-color: rgb(5, 17, 34);
+  color: #eaeaea;
+  /* height: 100vh; */
 }
 
-.movies-con{
+.movies-con {
   font-family: "Roboto", sans-serif;
-    /* padding: 20px 50px; */
-    padding-top: 6vh;
-    background-color: rgb(5, 17, 34);
-    color:#eaeaea;
-  }
+  /* padding: 20px 50px; */
+  padding-top: 6vh;
+  background-color: rgb(5, 17, 34);
+  color: #eaeaea;
+}
 
-  .movies-con .btn{
-    font-family: -webkit-body;
-    font-size:  75%;
-    color: rgb(80, 203, 255);
-    font-weight:500;
-    padding: 10px;
-    border: 1px solid rgb(80, 203, 255);
-    border-radius: 10px;
-    cursor: pointer;
-    margin-top: 3vh;
-  }
+.movies-con .btn {
+  font-family: -webkit-body;
+  font-size: 75%;
+  color: rgb(80, 203, 255);
+  font-weight: 500;
+  padding: 10px;
+  border: 1px solid rgb(80, 203, 255);
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: 3vh;
+}
 
-  .movies-con .btn:hover{
-    color: rgb(166, 226, 251);
-  }
-  .movie-con{
+.movies-con .btn:hover {
+  color: rgb(166, 226, 251);
+}
+.movie-con {
   display: grid;
   grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: repeat(3, 600px);
   row-gap: 55px;
+  column-gap: 150px;
   justify-content: center;
   padding-top: 10px;
-  }
-
-  .movie-page p{
-    width: 200px;
-  }
-
-.movies{
-    display: flex;
-    gap: 10px;
 }
 
-
-.img{
-    width: 230px;
-    height: 330px;
-    object-fit: cover;
-    background-color: rgb(177, 230, 244);
-  }
-
-.delete{
-    border: none;
-    padding: 5px 10px;
-    background-color: rgb(195, 231, 231);
-    cursor: pointer;
-    /* border: 1px solid rgb(204, 204, 245); */
-    color:rgb(203, 41, 41);
-    font-weight: 600;
-    margin: 10px;
+.movie-page h2,
+p {
+  width: 250px;
 }
 
-.update{
-    border: none;
-    background-color: rgb(195, 231, 231);
-    padding: 5px 10px;
-    /* background-color: white; */
-    cursor: pointer;
-    /* border: 1px solid rgb(5, 17, 34); */
-    color:rgb(5, 17, 34) ;
-    font-weight: 600;
+.movies {
+  display: flex;
+  gap: 10px;
 }
 
-.update-btn{
+.img {
+  width: 230px;
+  height: 330px;
+  object-fit: cover;
+  background-color: rgb(177, 230, 244);
+}
+
+.delete {
+  border: none;
+  padding: 5px 10px;
+  background-color: rgb(195, 231, 231);
+  cursor: pointer;
+  /* border: 1px solid rgb(204, 204, 245); */
+  color: rgb(203, 41, 41);
+  font-weight: 600;
+  margin: 10px;
+}
+
+.update {
+  border: n one;
+  background-color: rgb(195, 231, 231);
+  padding: 5px 10px;
+  /* background-color: white; */
+  cursor: pointer;
+  /* border: 1px solid rgb(5, 17, 34); */
+  color: rgb(5, 17, 34);
+  font-weight: 600;
+}
+
+.update-btn {
   border: none;
 }
 
-.form-add{
-    margin-top: 10vh;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    height: 100vh;
-  }
-  
-  .form-add input{
-    border-radius: 10px;
-    border: 2px solid rgb(80, 203, 255);
-    width: 30%;
-    height: 7%;
-  }
+.form-add {
+  margin-top: 10vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  height: 100vh;
+}
 
-  .form-add h2{
-    border-bottom: 1px solid #eaeaea;
-    width: 100%;
-    font-weight: 500;
-  }
+.form-add input {
+  border-radius: 10px;
+  border: 2px solid rgb(80, 203, 255);
+  width: 30%;
+  height: 7%;
+}
 
-  .form-add button{
-    width: 15%;
-    padding: 10px 25px;
-    font-size: medium;
-    font-weight: 600;
-    background-color: rgb(80, 203, 255);
-    border: none;
-    color: rgb(5, 17, 34);
-    cursor: pointer;
-  }
-.form-update{
-    margin-top: 10vh;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    height: 100vh;
-  }
-  
-  .form-update input{
-    border-radius: 10px;
-    border: 2px solid lightcoral;
-    width: 30%;
-    height: 7%;
-  }
+.form-add h2 {
+  border-bottom: 1px solid #eaeaea;
+  width: 100%;
+  font-weight: 500;
+}
 
-  .form-update h2{
-    border-bottom: 1px solid lightcoral;
-    width: 100%;
-    font-weight: 500;
-    padding-bottom: 10px;
-  }
-  
-  input{
-    width: 250px;
-    padding: 10px;
-    border: 1px solid gray;
-  }
-
-.formButton{
+.form-add button {
+  width: 15%;
+  padding: 10px 25px;
+  font-size: medium;
+  font-weight: 600;
+  background-color: rgb(80, 203, 255);
   border: none;
-    padding: 10px 25px;
-    width: 15%;
-    background-color: lightcoral;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-  }
+  color: rgb(5, 17, 34);
+  cursor: pointer;
+}
+.form-update {
+  margin-top: 10vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  height: 100vh;
+}
 
-  form {
-    width: 50%;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    /* background-color: rgb(5, 17, 34);
+.form-update input {
+  border-radius: 10px;
+  border: 2px solid lightcoral;
+  width: 30%;
+  height: 7%;
+}
+
+.form-update h2 {
+  border-bottom: 1px solid lightcoral;
+  width: 100%;
+  font-weight: 500;
+  padding-bottom: 10px;
+}
+
+input {
+  width: 250px;
+  padding: 10px;
+  border: 1px solid gray;
+}
+
+.formButton {
+  border: none;
+  padding: 10px 25px;
+  width: 15%;
+  background-color: lightcoral;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+form {
+  width: 50%;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  /* background-color: rgb(5, 17, 34);
     height: 100vh; */
 }
 /* ---------------------- */
 
 .login {
   margin-top: 10vh;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    height: 100vh;
-      background-color: rgb(5, 17, 34);
-      color:#eaeaea;
-      width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  height: 100vh;
+  background-color: rgb(5, 17, 34);
+  color: #eaeaea;
+  width: 100%;
 }
 
-.register{
+.register {
   margin-top: 10vh;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    height: 100vh;
-    background-color: rgb(5, 17, 34);
-    color:#eaeaea;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  height: 100vh;
+  background-color: rgb(5, 17, 34);
+  color: #eaeaea;
+  width: 100%;
 }
 
 .form-con {
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: flex;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-
-  .form-control{
-
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    /* box-sizing: border-box; */
-  }
-  
-
-  button[type="submit"] {
-    width: 13%;
-    background-color: rgb(44, 180, 218);
-    color: rgb(10, 10, 10);
-    padding: 14px 20px;
-    /* margin: 8px 0; */
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: flex;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
-.register-btn{
+.form-control {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  /* box-sizing: border-box; */
+}
+
+button[type="submit"] {
+  width: 13%;
+  background-color: rgb(44, 180, 218);
+  color: rgb(10, 10, 10);
+  padding: 14px 20px;
+  /* margin: 8px 0; */
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.register-btn {
   color: rgb(44, 180, 218);
 }
-
 
 button[type="submit"]:hover {
   background-color: rgb(42, 144, 173);
@@ -250,12 +248,11 @@ button[type="submit"]:hover {
 
 .form-check {
   margin: 8px 0;
-    padding: 12px 20px;
-    display: inline-block;
+  padding: 12px 20px;
+  display: inline-block;
 }
 
 /* navbar */
-
 
 header {
   font-family: "Roboto", sans-serif;
@@ -264,7 +261,7 @@ header {
   top: 0;
   right: 0;
   width: 100%;
-  z-index: 1; 
+  z-index: 1;
   background-color: rgb(5, 17, 34);
   /* #1a079b */
 }
@@ -276,15 +273,17 @@ header {
   margin-left: 1%;
   display: grid;
   justify-content: space-around;
-  grid-template-columns: 13% 40% 15%;
+  grid-template-columns: 13% 40% 25%;
   align-items: center;
   transition: 0.5s;
   height: 8vh;
 }
 
 header img {
-  width: 90px;
+  border-radius: 60%;
+  width: 50px;
   object-fit: cover;
+  margin-left: 40px;
 }
 
 .navbar {
@@ -304,25 +303,43 @@ header img {
   justify-content: space-around;
   align-items: center;
 }
-.switch_topics .tabs__button{
-    cursor: pointer;
-    color:#eaeaea;
-  }
-  .tabs__button:hover{
-    color: rgb(108, 203, 227);
+.switch_topics .tabs__button {
+  cursor: pointer;
+  color: #eaeaea;
+}
+.tabs__button:hover {
+  color: rgb(108, 203, 227);
 }
 
-.auth{
+.auth {
   display: flex;
-    justify-content:right;
-  }
-.auth .btn {
-    text-decoration: none;
-    color:#eaeaea;
-    padding: 8px 15px;
+  flex-direction: row;
+  justify-content: center;
 }
-.auth .btn:hover{
-    color: rgb(108, 203, 227);
+.auth .btn {
+  font-size: 20px;
+  font-weight: 700;
+  text-decoration: none;
+  flex: 1;
+  color: #eaeaea;
+  padding: 8px 15px;
+}
+.auth .btn:hover {
+  color: rgb(108, 203, 227);
+}
+.auth .logout {
+  color: rgb(249, 35, 113);
+  font-size: x-large;
+  cursor: pointer;
+  text-decoration: none;
+  padding: 8px 15px;
+}
+.auth .hr {
+  cursor: pointer;
+  margin-top: -5px;
+}
+.auth .logout:hover {
+  color: rgb(255, 242, 242);
 }
 
 .navbar img {
@@ -331,147 +348,148 @@ header img {
   margin-top: 10px;
 }
 
-.footer{
+.footer {
   font-family: "Roboto", sans-serif;
-    height: 100px;
-    background-color: rgb(5, 17, 34);
-    color:#eaeaea;
-    margin-top: 100px;
-  }
+  height: 100px;
+  background-color: rgb(5, 17, 34);
+  color: #eaeaea;
+  margin-top: 100px;
+}
 
-  .main-container {
-    margin: 20px 20px;
-  }
-  
-  .movies {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: repeat(2, 400px);
-    justify-content: center;
-  }
+.main-container {
+  margin: 20px 20px;
+}
 
-  .movies img {
-    width: 200px;
-    object-fit: cover;
-    margin-left: 30px;
-    margin-right: 30px;
-    cursor: pointer;
-    position: relative;
-  }
-  
-  .movies_desc {
-    width: 800px;
-    position: relative;
-    width: 100%;
-    margin-bottom: 100px;
-  }
-  
-  .img-desc {
-    padding-top: 50px;
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
-  }
-  
-  .title-desc {
-    position: absolute;
-    font-size:250% ;
-    left: 30px;
-    /* width: 650px; */
-    top: 55%;
-    color:#ffffff;
-    font-family: -webkit-body;
-  }
+.movies {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: repeat(2, 400px);
+  justify-content: center;
+}
 
-  .movie-item-desc-btn {
-    font-family: -webkit-body;
-    color: #eaeaea;
-    font-weight: bolder;
-    position: absolute;
-    left: 50px;
-    top: 82%;
-    width: 300px;
-    height: 50px;
-    padding: 10px;
-    border-radius: 6px;
-    font-size: 150%;
-    /* background-color: rgb(80, 203, 255); */
-    cursor: pointer;
-    border: 1px solid #eaeaea;
-    border-bottom-right-radius: 25px;
-  }
+.movies img {
+  width: 200px;
+  object-fit: cover;
+  margin-left: 30px;
+  margin-right: 30px;
+  cursor: pointer;
+  position: relative;
+}
 
-  .movie{
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-      align-items: center;
-      margin: 10px;
-  }
+.movies_desc {
+  width: 800px;
+  position: relative;
+  width: 100%;
+  margin-bottom: 100px;
+}
 
-  .movie-item-desc-btn:hover {
-    color: rgb(80, 203, 255);
-    border: 1px solid rgb(80, 203, 255);
-    font-weight: bold;
-  }
+.img-desc {
+  padding-top: 50px;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
 
-  .home-films {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: repeat(3, 500px);
-    justify-content: space-evenly;
-    margin-top: 70px;
-  }
+.title-desc {
+  position: absolute;
+  font-size: 250%;
+  left: 30px;
+  /* width: 650px; */
+  top: 55%;
+  color: #ffffff;
+  font-family: -webkit-body;
+}
 
-  .home-films .h2{
-    font-weight: 600;
-    font-family: -webkit-body;
-    position: relative;
-    bottom: 15px;
-    text-decoration: none;
-    color: #eaeaea;
-  }
+.movie-item-desc-btn {
+  font-family: -webkit-body;
+  color: #eaeaea;
+  font-weight: bolder;
+  position: absolute;
+  left: 50px;
+  top: 82%;
+  width: 300px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 6px;
+  font-size: 150%;
+  /* background-color: rgb(80, 203, 255); */
+  cursor: pointer;
+  border: 1px solid #eaeaea;
+  border-bottom-right-radius: 25px;
+}
 
-  .home hr{
-    display: inline-block;
-    align-content: center;
-    border: 1px solid rgb(80, 203, 255);
-    width: 200px;
-    /* margin-bottom: 100px; */
-  }
+.movie {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+  margin: 10px;
+}
 
-  .edit{
-    font-family: -webkit-body;
-    display: inline-block;
-    color: #eaeaea;
-    font-weight: bold;
-    width: 300px;
-    height: 50px;
-    padding: 10px;
-    border: 1px solid #eaeaea;
-    border-radius: 6px;
-    cursor: pointer;
-  }
+.movie-item-desc-btn:hover {
+  color: rgb(80, 203, 255);
+  border: 1px solid rgb(80, 203, 255);
+  font-weight: bold;
+}
 
-  .edit:hover{
-    border: 1px solid rgb(80, 203, 255);
-    color: rgb(80, 203, 255);
-  }
+.home-films {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: repeat(3, 500px);
+  justify-content: space-evenly;
+  margin-top: 70px;
+}
 
-  .single{
+.home-films .h2 {
+  width: 250px;
+  font-weight: 600;
+  font-family: -webkit-body;
+  position: relative;
+  bottom: 15px;
+  text-decoration: none;
+  color: #c8c4c4;
+}
+
+.home hr {
+  display: inline-block;
+  align-content: center;
+  border: 1px solid rgb(80, 203, 255);
+  width: 200px;
+  /* margin-bottom: 100px; */
+}
+
+.edit {
+  font-family: -webkit-body;
+  display: inline-block;
+  color: #eaeaea;
+  font-weight: bold;
+  width: 300px;
+  height: 50px;
+  padding: 10px;
+  border: 1px solid #eaeaea;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.edit:hover {
+  border: 1px solid rgb(80, 203, 255);
+  color: rgb(80, 203, 255);
+}
+
+.single {
   margin-top: 10vh;
   display: flex;
   gap: 50px;
 }
- .content{
-    flex: 5; 
-  }
-.content img{
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-    }
-  .menu{
-    flex: 2;
-  }
+.content {
+  flex: 5;
+}
+.content img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.menu {
+  flex: 2;
+}
